--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Tareas</h1>
     <form action="">
-        <input type="text">
-        <button>Guardar</button>
+        <input id="text" type="text">
+        <button type="submit">Guardar</button>
     </form>
     <hr/>
     <table>
@@ -39,5 +39,7 @@
             </td>
         </tr>
     </table>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
